Changed timestamp from int in ms to float in s that python produces.
